--- a/src/Benchmarks.Framework/project.json
+++ b/src/Benchmarks.Framework/project.json
@@ -6,15 +6,15 @@
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-*",
     "Microsoft.Extensions.PlatformAbstractions": "1.0.0-*",
     "Microsoft.AspNetCore.Testing": "1.0.0-*",
-    "Microsoft.NETCore.Platforms": "1.0.1-*",
     "xunit": "2.1.0"
   },
   "frameworks": {
     "netstandardapp1.5": {
       "dependencies": {
+        "NETStandard.Library": "1.5.0-*",
         "xunit.runner.reporters": "2.1.0",
         "System.Console": "4.0.0-*",
-        "System.Data.SqlClient": "4.0.0-*"
+        "System.Data.SqlClient": "4.1.0-*"
       },
       "imports": [
         "dnxcore50",
