--- a/testapp/StarterMvc/project.json
+++ b/testapp/StarterMvc/project.json
@@ -9,6 +9,7 @@
     "Microsoft.EntityFrameworkCore.Commands": "1.0.0-*",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0-*",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0-*",
+    "Microsoft.AspNetCore.Diagnostics": "1.0.0-*",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0-*",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0-*",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-*",
@@ -23,7 +24,10 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0-*",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-*",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-*",
-    "Microsoft.NETCore.Platforms": "1.0.1-*"
+    
+    "System.ComponentModel": "4.0.1-*",
+    "System.IO": "4.1.0-*",
+    "System.Runtime": "4.1.0-*"
   },
   "tools": {
     "dotnet-razor-tooling": "1.0.0-*"
