--- a/testapp/HelloWorldMvc/project.json
+++ b/testapp/HelloWorldMvc/project.json
@@ -4,22 +4,22 @@
     "emitEntryPoint": true,
     "preserveCompilationContext": true
   },
-  "frameworks": {
-    "netstandardapp1.5": {
-      "dependencies": {
-        "NETStandard.Library": "1.5.0-*"
-      },
-      "imports": [
-        "dnxcore50",
-        "portable-net451+win8"
-      ]
-    },
-    "net451": {}
-  },
+ "frameworks": { 
+       "netcoreapp1.0": { 
+         "imports": [ 
+           "portable-net45+wp80+win8+wpa81+dnxcore50" 
+         ] 
+       } 
+     }, 
   "dependencies": {
+    "Microsoft.NETCore.App": { 
+             "type": "platform", 
+             "version": "1.0.0-rc2-23931" 
+         }, 
     "Microsoft.AspNetCore.Mvc": "1.0.0-*",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-*",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-*"
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-*",
+    "Microsoft.DiaSymReader.Native": "1.3.3" 
   },
   "commands": {
     "web": "HelloWorldMvc"
